# app/Models/Book.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Book extends Model
+{
+    /** @use HasFactory<\Database\Factories\BookFactory> */
+    use HasFactory;
+
+    protected $fillable = ['title', 'author', 'publication_year', 'price', 'description', 'image'];
+}
